--- a/todolist/app/style/index.css
+++ b/todolist/app/style/index.css
@@ -1,20 +1,1 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-.list {
-  margin-top: 100px;
-  padding: 0 10px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.box-card {
-  flex: 0 0 480px;
-  margin: 10px;
-}
-.box-card-header {
-  display: flex;
-}
-/* .box-card-header span {
-} */
+.header{width:100%;height:150px;line-height:150px;text-align:center}.list{padding:0 10px;display:flex;flex-wrap:wrap;justify-content:center}.empty{width:100%;height:300px;line-height:300px;text-align:center}.box-card{flex:0 0 480px;margin:10px}.box-card-header{display:flex;align-items:center}.box-card-header span{flex:1}.box-card-header span:last-child{text-align:right}
